--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "event-management-react": "file:",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.0.8",
+    "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
