--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "event-management-react": "file:",
+    "jose": "^5.9.6",
     "lucide-react": "^0.453.0",
     "nanoid": "^5.0.8",
     "next-themes": "^0.4.3",
